fixed scrollbar

--- a/elixir/src/index.css
+++ b/elixir/src/index.css
@@ -1,19 +1,20 @@
 /* width */
 ::-webkit-scrollbar {
-    width: 7px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f85359;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #f85359;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #f85359;
-  }
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f85359; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #f85359; 
+}
